--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ p{
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 137.9%;
+    line-height: 150%;
 }
 
 h2{
@@ -357,14 +357,51 @@ li.item:hover{
 .work h1{
     margin: 0 auto;
     padding-bottom: 2%;
+    color: white;
 } 
 
+.project01{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 
+.projectImage img{
+    margin: 5000%;
+}
 
+.project02{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 
+.project03{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 
+.backgrounds.workbg{
+    background: #36103f
+}
 
+.work{
+    padding: 5% 5% 7% 5%;
+}
 
+.work h2{
+    color: whitesmoke;
+    margin-top: 0;
+}
+
+.work p{
+    color: whitesmoke;
+    margin-bottom: 4%;
+}
 
 
 
