--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,15 @@ h6{
     line-height: 107.9%;
 }
 
+.button1 a{
+    text-decoration: none;
+    color: #36103f;
+}
 
+.button2 a{
+    text-decoration: none;
+    color: white;
+}
 
 
 /* NAVIGATION HEADER */
@@ -114,8 +122,9 @@ h6{
     justify-content: space-between;
 }
 
-li.item:hover{
+.navigation li a:hover{
     color: #febf4c;
+    background-color: transparent;
 }
 
 .logo{
@@ -134,6 +143,16 @@ li.item:hover{
     flex:2;
 }
 
+.navigation a:link{
+    text-decoration: none;
+    color: #36103f;
+    background-color: transparent;
+}
+.navigation a:visited {
+    text-decoration: none;
+    color: #36103f;
+    background-color: transparent;
+}
 
 
 
@@ -363,26 +382,30 @@ li.item:hover{
 .project01{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-bottom: 3%;
 }
 
-.projectImage img{
-    margin: 5000%;
+.projectText{
+    margin-left:3%;
+    margin-top: 0;
+    max-width: 500px;
 }
 
 .project02{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-bottom: 3%;
 }
 
 .project03{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .backgrounds.workbg{
@@ -391,6 +414,10 @@ li.item:hover{
 
 .work{
     padding: 5% 5% 7% 5%;
+}
+
+.work img{
+    height: 340px ;
 }
 
 .work h2{
@@ -402,6 +429,8 @@ li.item:hover{
     color: whitesmoke;
     margin-bottom: 4%;
 }
+
+
 
 
 
