--- a/css/styles2.css
+++ b/css/styles2.css
@@ -10,7 +10,7 @@
   /*GENERAL PAGE DESIGN*/
 
   body{
-      font-family: 'Montserrat';
+      font-family: 'Montserrat', sans-serif;
       margin:0;
   }
 
