working on navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,66 +1,17 @@
-/* GENERAL PAGE DESIGN*/
 
-body{
-    font-family: 'Montserrat';
+
+/* GENERAL LAYOUT */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .p {
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
 
-
-.content{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-.main { 
-    max-width: 1240px; 
-    margin: 0 auto; 
-    padding: 0 3em 1.5em; 
-} 
-   
-.button2{
-    color: #ffffff;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight:600;
-    letter-spacing:0.235em;
-    text-transform: uppercase;
-    background-color: #36103f;
-    padding: 10px;
-    min-width: 294px;
-    justify-content: center;
-    min-height: 39px;
-    top:57px;
-    margin-bottom: 3%;
-    border-radius: 5px;
-    border:none;
-}
-
-.button2:hover{
-    background-color: #febf4c;
-    color: #36103f;
-}
-
-.button1{
-    color: #36113f;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight:600;
-    letter-spacing:0.235em;
-    text-transform: uppercase;
-    background-color: #febf4c;
-    padding: 10px;
-    min-width: 294px;
-    justify-content: center;
-    min-height: 39px;
-    top:57px;
-    margin-bottom: 3%;
-    border-radius: 5px;
-    border:none;
-}
-
-.button1:hover{
-    background-color: #fbcccc;
-    color: #36103f;
+body{
+    font-family: 'Montserrat','sans-serif';
 }
 
 h1 {
@@ -69,13 +20,6 @@ h1 {
     font-size: 47px;
     line-height: 107.9%;
     text-transform: uppercase;
-}
-
-p{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 150%;
 }
 
 h2{
@@ -100,6 +44,71 @@ h6{
     line-height: 107.9%;
 }
 
+p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+}
+
+.button2{
+    color: #ffffff;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight:600;
+    letter-spacing:0.235em;
+    text-transform: uppercase;
+    background-color: #36103f;
+    padding: 10px;
+    min-width: 294px;
+    justify-content: center;
+    min-height: 39px;
+    top:57px;
+    margin-bottom: 3%;
+    border-radius: 5px;
+    border:none;
+    font-size: smaller;
+}
+
+.button2:hover{
+    background-color: #febf4c;
+    color: #36103f;
+}
+
+.button1{
+    color: #36113f;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight:600;
+    letter-spacing:0.235em;
+    text-transform: uppercase;
+    background-color: #febf4c;
+    padding: 10px;
+    min-width: 294px;
+    justify-content: center;
+    min-height: 39px;
+    top:57px;
+    margin-top: 3%;
+    border-radius: 5px;
+    border:none;
+    font-size: smaller;
+}
+@media only screen and (max-width: 600px){
+    .button1{
+        margin-bottom: 10%;
+    }
+
+    .button2{
+        margin-bottom: 10%;
+    }
+    
+}
+
+.button1:hover{
+    background-color: #fbcccc;
+    color: #36103f;
+}
+
 .button1 a{
     text-decoration: none;
     color: #36103f;
@@ -111,50 +120,24 @@ h6{
 }
 
 
+
 /* NAVIGATION HEADER */
 
-
-.navigation ul{
-    border: 1px red;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav-item a:hover{
-    color: #febf4c;
+.navbar-light .navbar-nav .nav-item .nav-link{
+    color: #36103f;
     background-color: transparent;
 }
+
 
 .logo{
     padding: 20px;
     align-self: flex-start;
     flex: 5;
     margin-top: 15px;
-   padding-bottom: 0;
+    padding-bottom: 0;
 }
 
-#logo svg:hover{
-    fill: red ;
-}
 
-.navigation .item{
-    flex:2;
-}
-
-.navigation a:link{
-    text-decoration: none;
-    color: #36103f;
-    background-color: transparent;
-}
-.navigation a:visited {
-    text-decoration: none;
-    color: #36103f;
-    background-color: transparent;
-}
 
 
 
@@ -167,38 +150,6 @@ h6{
     padding: 10%;
 }
 
-.heroGrid{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 
-    "heroLeft heroText"
-    ;
-}
-
-.heroLeft{
-    grid-area: heroLeft;
-}
-
-.heroText{
-    grid-area: heroText;
-    color: #fbcccc;
-    padding-left: 5%;
-}
-
-.heroText h1{
-    font-style: normal;
-    font-weight: bold;
-    font-size: 64px;
-    line-height: 107.9%;
-}
-
-.heroText p{
-    font-style: normal;
-    font-weight: 250;
-    font-size: 45px;
-    line-height: 107.9%;
-}
-
 .backgrounds.herocolor{
     background-image: url(https://images.unsplash.com/photo-1477093782505-e10aaeb27c6d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1600&q=80);
     background-attachment: fixed;
@@ -208,61 +159,46 @@ h6{
 
 }
 
+.heroText{
+    font-style: normal;
+    color: #fbcccc;
+}
 
 
 
 
 /* ABOUT ME SECTION */
 
-.aboutMe{
-    display: grid;
-    grid-template-columns:1fr  1fr 1fr 1fr;
-    grid-template-areas: 
-    "leftContent leftContent  rightContnet rightContent"
-    ;
-    padding: 5%;
-    background-color: #36113f;
-}
-
-.leftContent{
-    grid-area: leftContent;
-}
-
-.rightContent{
-    grid-area: rightContent;
-    
-}
-
 .backgrounds.about{
     background-color: #36113f;
 }
 
-.aboutMe h6{
-    color: #ffffff;
+.aboutMe{
+    color: white;
+    padding: 7%;
+}
+
+.aboutMeText{
+    padding: 3%;
 }
 
 .aboutMe h1{
-    color: white;
-    margin: 0;
+    margin-bottom:3%;
 }
 
 .aboutMe p{
-    color: white;
-    width: 500px;
+    margin-bottom:5%;
 }
-.aboutMeMain.leftContent p{
-    margin-bottom: 5%;
-}
+
 .aboutMeSecondary.rightContent h6{
     margin-top: 25px;
     margin-bottom: 5px;
 }
+
 .aboutMeSecondary.rightContent p{
     margin-top: 10px;
     margin-bottom:10px;
 }
-
-
 
 
 
@@ -281,66 +217,17 @@ h6{
     padding-bottom: 2%;
 }
 
-.awardsImg img{
-    max-width: 239px;
-    max-height: 95px;
-}
-
-.awardsLogos{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 50px;
-    flex-wrap: wrap;
-}
-
 .awards{
-    padding:5%;
-
+    padding:7%;
 }
-
-
-
-
-
 
 
 
 
 /* SKILLS SECTION */
 
-.skillsGroup{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-areas: 
-    "visual interaction software coding"
-    ; 
-    background-color:#FFDFA5 ;
-}
-
 .backgrounds.skillsbg{
     background-color: #FFDFA5;
-}
-
-.visual{
-    grid-area: visual;
-}
-
-.interaction{
-    grid-area: interaction;    
-}
-
-.software{
-    grid-area: software;
-}
-
-.coding{
-    grid-area: coding;
-}
-
-.skillsHeading{
-    grid-area: skillsHeading;
 }
 
 .skills ul{
@@ -349,17 +236,14 @@ h6{
     padding: 0;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 210%;
 }
 
 .skills h1{
-    margin: 0 auto;
     padding-bottom: 2%;
 } 
 
 .skills{
-    padding: 5%;
+    padding: 7%;
 }
 
 .skills h2{
@@ -370,57 +254,16 @@ h6{
 
 
 
-
-
-
-
 /* WORK SECTION */
 
 .work h1{
     margin: 0 auto;
-    padding-bottom: 2%;
+    padding-bottom: 1%;
     color: white;
 } 
 
-.project01{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding-bottom: 3%;
-}
-
-.projectText{
-    margin-left:3%;
-    margin-top: 0;
-    max-width: 500px;
-}
-
-.project02{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding-bottom: 3%;
-}
-
-.project03{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-
 .backgrounds.workbg{
-    background: #36103f
-}
-
-.work{
-    padding: 5% 5% 7% 5%;
-}
-
-.work img{
-    height: 340px ;
+    background: #36103f;
 }
 
 .work h2{
@@ -433,37 +276,35 @@ h6{
     margin-bottom: 4%;
 }
 
+.projects{
+    align-items: space-between;
+}
 
+.work{
+    height: fit-content;
+    padding: 5%;
+}
 
+.proj02{
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
 
+.proj01{
+    padding-top: 1%;
+    padding-bottom: 3%;
+}
+
+.proj03{
+    padding-top: 3%;
+    padding-bottom: 2%;
+}
 
 
 
 
 /* GET IN TOUCH */
 
-.getInTouch{
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: 1fr 3fr;
-    grid-template-areas: 
-    "touchTop touchTop"
-    "inTouchLeft inTouchRight"
-    ;
-    padding: 5%;
-}
-
-.touchTop{
-    grid-area: touchTop;
-}
-
-.inTouchLeft{
-    grid-area: inTouchLeft;
-}
-
-.inTouchRight{
-    grid-area:inTouchRight;
-}
 
 .buttonLayout{
     padding:0px; 
@@ -482,4 +323,29 @@ h6{
 
 .inTouchLeft p{
     margin-top: 1%;
+}
+
+.inTouchRight p .strong{
+    font-weight: bold;
+}
+
+
+
+
+/* FOOTER SECTION */
+
+.backgrounds.footer{
+    background-color: black;
+    color: white;
+    height: 80px;
+}
+
+.footer {
+    padding: 3%;
+}
+
+.footer p{
+    font-size: 10px;
+   
+    text-align: center;
 }
