--- a/css/projects.css
+++ b/css/projects.css
@@ -206,3 +206,20 @@ img{
     padding: 0;
 }
 
+
+
+
+
+
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-image: url('../images\loadingimages.gif/default.gif');
+    background-repeat: no-repeat; 
+    background-color: #FFF;
+    background-position: center;
+ }
