--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,67 @@ p{
 }
 
 
+.facebook {
+    width:48px;
+    height: 48px;
+    position: relative;
+    display: inline-block;
+    margin: 3%;
+    margin-bottom: 5%;
+}
+.facebook .img-top {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+.facebook:hover .img-top {
+    display: inline;
+}
+
+
+.instagram {
+    width:48px;
+    height: 48px;
+    position: relative;
+    display: inline-block;
+    margin: 3%;
+    margin-bottom: 5%;
+}
+.instagram .img-top {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+.instagram:hover .img-top {
+    display: inline;
+}
+
+
+.linkedin {
+    width:48px;
+    height: 48px;
+    position: relative;
+    display: inline-block;
+    margin: 3%;
+    margin-bottom: 5%;
+}
+.linkedin .img-top {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+.linkedin:hover .img-top {
+    display: inline;
+}
+
+
+
 
 
 /* FOOTER SECTION */
@@ -341,11 +402,18 @@ p{
 }
 
 .footer {
-    padding: 3%;
+    padding-top: 3%;
+    padding-bottom: 5%;
 }
 
 .footer p{
     font-size: 10px;
    
+    text-align: center;
+}
+
+.sources{
+    font: bold;
+    font-size: 10px;
     text-align: center;
 }
